--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,91 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Edu+QLD+Beginner:wght@400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+*{
+  margin:0;
+  font-family: 'Poppins';
+}
+body{
+  background-color: #a0a0a025;
+}
+.App{
+  max-width: 800px;
+  margin: 0px auto;
+  background-color: white;
+  min-height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar{
+  display: flex;
+  padding: 30px 20px;
+  max-width: 100%;
+  margin: 0px auto;
+  justify-content: space-between;
+  border-bottom: 1px solid #10101010;
+}
+
+.navbar h1{
+  color: rgb(77, 77, 248);
+  font-size: 28px;
+  cursor: pointer;
+}
+
+.navbar span{
+  font-weight: 300;
+  border-left: 1px solid black;
+  color: black;
+  padding-left: 5px;
+}
+
+.navbar .links{
+  font-size: 18px;
+  margin: auto 0;
+}
+
+.navbar .links a{
+  text-decoration: none;
+  color: black;
+  padding: 0 15px;
+  transition: .2s;
+}
+
+.navbar .links a:hover{
+  color: rgb(77, 77, 248);
+  transition: .2s;
+}
+
+.content{
+  max-width: 100%;
+  margin: 40px auto;
+  padding: 0 20px;
+}
+
+.content h1{
+  font-size: 24px;
+  font-weight: 600;
+  margin: 20px 0;
+}
+
+.content .blog-preview{
+  margin: 30px 0;
+  margin-left: 20px;
+}
+.content .blog-preview h2{
+  font-size: 18px;
+  font-weight: 600;
+  cursor: pointer;
+  color: rgba(77, 77, 248, .80);
+}
+.content .blog-preview h2:hover{
+  color: rgb(77, 77, 248);
+}
+.content .blog-preview span{
+  cursor: pointer;
+  font-style: italic;
+}
+.content .blog-preview span:hover{
+  color: blueviolet;
+  font-weight: 500;
+}
+.content .blog-preview p{
+  margin-left: 10px;
+  font-size: 16px;
 }
